fix(layout): added scrollbar and overlay issues with editmode sidebar.

--- a/src/mobro/styles/_helpers.scss
+++ b/src/mobro/styles/_helpers.scss
@@ -16,6 +16,10 @@
   max-height: 100%;
 }
 
+.z-index-1 {
+  z-index: 1;
+}
+
 .position-absolute-tl {
   position: absolute;
   top: 0.25rem;
