--- a/src/mobro/styles/components/_scrollbar.scss
+++ b/src/mobro/styles/components/_scrollbar.scss
@@ -18,8 +18,8 @@
 
   &::-webkit-scrollbar-thumb {
     background: lighten($app-black, 15%);
-    border: 0 none #ffffff;
-    border-radius: 0;
+    border: 2px solid transparent;
+    border-radius: 3px;
   }
 
   &::-webkit-scrollbar-track {
@@ -30,5 +30,20 @@
 
   &::-webkit-scrollbar-corner {
     background: $app-black;
+  }
+}
+
+.scrollable--x {
+  overflow-x: auto;
+}
+
+.scrollable--bigger {
+  &::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 6px;
   }
 }
